--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "kts-hw-5",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.24.5",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5"
+  },
+  "browserslist": [
+    "last 2 chrome versions"
+  ]
 }
