--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "npx webpack serve"
+    "dev": "NODE_ENV=development npx webpack serve --mode=development",
+    "build": "NODE_ENV=production npx webpack --mode=production"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -15,9 +16,11 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.13",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
     "html-webpack-plugin": "^5.6.0",
+    "react-refresh": "^0.14.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
