--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.13",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "postcss-loader": "^8.1.1",
     "react-refresh": "^0.14.2",
+    "sass": "^1.77.0",
+    "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "browserslist": [
-    "last 2 chrome versions"
+    "last 2 versions"
   ]
 }
