--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "i18next": "^23.11.4",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "marked": "^12.0.2",
     "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
     "qs": "^6.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.1",
     "react-router-dom": "6",
     "regenerator-runtime": "^0.14.1"
   },
