--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kts-hw-5",
   "version": "1.0.0",
+  "homepage": "https://matroskin.github.io/kts-hw-5",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -8,7 +9,9 @@
     "build": "NODE_ENV=production npx webpack --mode=production",
     "ts-check": "tsc --skipLibCheck --noEmit --project tsconfig.json",
     "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "eslint \"./src/**/*.{js,jsx,ts,tsx}\" --fix"
+    "lint:fix": "eslint \"./src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d .dist"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -48,6 +51,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss-loader": "^8.1.1",
