--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "babel-preset-mobx": "^2.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
     "dotenv-webpack": "^8.1.0",
     "eslint-config-prettier": "^9.1.0",
