--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "lint:fix": "eslint \"./src/**/*.{js,jsx,ts,tsx}\" --fix",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist",
-    "start": "serve -s dist"
+    "start": "http-server -p 3000 dist"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "http-server": "^14.1.1",
     "i18next": "^23.11.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
